[package]
name = "rust-monero-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
cuprate-blockchain = { path = "./external/cuprate/storage/blockchain", features = ["serde"] }
cuprate-database = { path = "./external/cuprate/storage/database", features = ["serde"] }
cuprate-types = { path = "./external/cuprate/types/types", features = ["serde"] }
monero-serai = { git = "https://github.com/Cuprate/serai.git", rev = "e6ae8c2", default-features = false }
hex = "0.4.3"
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
whoami = "1.6.0"
rayon = "1.10.0"
