[package]
name = "rust-monero-explorer-api"
version = "0.0.1"
edition = "2024"

[dependencies]
cuprate-blockchain = { path = "./external/cuprate/storage/blockchain", features = ["serde"] }
cuprate-database = { path = "./external/cuprate/storage/database", features = ["serde"] }
cuprate-types = { path = "./external/cuprate/types/types", features = ["serde"] }
cuprate-helper = { path = "./external/cuprate/helper", features = ["serde"] }
monero-serai = { git = "https://github.com/Cuprate/serai.git", rev = "e6ae8c2", default-features = false }
hex = "0.4.3"
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
whoami = "1.6.0"
rayon = "1.10.0"
clap = { version = "4.5.39", features = ["derive"] }
derive_more = "2.0.1"
regex = "1.11.1"
